--- a/src/css/HeaderNavBar.scss
+++ b/src/css/HeaderNavBar.scss
@@ -36,7 +36,7 @@
   .avatar-div-action{
       width: 100%;
       display: flex;
-     justify-content: end;
+     justify-content: space-between; 
   }
  .avatar-img{
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1), 0 4px 10px 0 rgba(0, 0, 0, 0.16);
