--- a/src/css/PBS.scss
+++ b/src/css/PBS.scss
@@ -127,6 +127,17 @@
 .pbs-modal::-webkit-scrollbar {
   display: none;
 }
+.add-product-btn{
+  width: 40px;
+  height: 35px;
+  background-color: var(--primary-color) !important;
+  color: white !important;
+  font-weight: 500;
+  border-radius: 3px;
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+}
 .cancel-save-btn-pbs {
   display: flex;
   justify-content: flex-end;
