mttr-pbs-changes

--- a/src/css/PBS.scss
+++ b/src/css/PBS.scss
@@ -137,6 +137,7 @@
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
+  margin-right: 0;
 }
 .cancel-save-btn-pbs {
   display: flex;
