--- a/src/css/MttrPrediction.scss
+++ b/src/css/MttrPrediction.scss
@@ -341,7 +341,7 @@
   }
 }
 
-.import-export-btn{
+.import-export-btn {
   width: 40px;
   height: 35px;
   background-color: var(--primary-color) !important;
@@ -351,7 +351,10 @@
   display: flex;
   justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
+  cursor: pointer; /* Change cursor to pointer on hover */
+  border: none; /* Remove any default border */
 }
+
 
 .import-export-container {
   display: flex;
