--- a/src/css/Reports.scss
+++ b/src/css/Reports.scss
@@ -51,7 +51,7 @@
   }
   .report-table {
     width: 100%;
-    border-collapse: collapse;
+    // border-collapse: collapse;
     margin-top: 1em;
   }
   
