--- a/src/css/PBS.scss
+++ b/src/css/PBS.scss
@@ -216,4 +216,12 @@ table.MuiTableHead-root {
   border-bottom: 1px solid rgba(224, 224, 224, 1);
 }
 
+.no-vertical-scroll, .modal-body {
+  overflow-y: hidden !important;
+}
+
+
+
+ 
+
 
