--- a/src/css/SideBar.scss
+++ b/src/css/SideBar.scss
@@ -460,7 +460,7 @@ border-radius: 8px !important;
 }
 
 .debug-employee-content {
-  border: 2px solid green !important;
+  // border: 2px solid green !important;
 }
 
 // Force visibility for debugging
